[gd_scene load_steps=8 format=3 uid="uid://3pk21igdb5hv"]

[ext_resource type="Script" uid="uid://bhri55uv76joh" path="res://Window.gd" id="1_11sgr"]
[ext_resource type="Script" uid="uid://ce76tama6ekgf" path="res://TRPCErrorDialog.gd" id="1_e3op7"]
[ext_resource type="Texture2D" uid="uid://fmy2p2okfail" path="res://IconBug.svg" id="2_ixab2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u6le3"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.498039, 0.113725, 0.113725, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f5q2f"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.199206, 0.0471541, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4u12"]
bg_color = Color(0.937255, 0.266667, 0.266667, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xc1jd"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.937255, 0.266667, 0.266667, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_e3op7")

[node name="Window" type="Window" parent="."]
unique_name_in_owner = true
title = "TRPC Error"
position = Vector2i(0, 36)
size = Vector2i(600, 400)
visible = false
script = ExtResource("1_11sgr")

[node name="MarginContainer" type="MarginContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_u6le3")

[node name="HBoxContainer" type="HBoxContainer" parent="Window/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="Window/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Error"

[node name="Prev" type="Button" parent="Window/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "<="

[node name="Next" type="Button" parent="Window/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "=>"

[node name="ScrollContainer" type="ScrollContainer" parent="Window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Window/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="error" type="Label" parent="Window/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ShowStackTrace" type="Button" parent="Window/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show stacktrace"

[node name="PanelContainer" type="PanelContainer" parent="Window/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_f5q2f")

[node name="stacktrace" type="RichTextLabel" parent="Window/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
fit_content = true

[node name="ShowErrors" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_u4u12")
icon = ExtResource("2_ixab2")
expand_icon = true

[node name="Label" type="Label" parent="ShowErrors"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = -4.0
offset_right = 36.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_xc1jd")
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="about_to_popup" from="Window" to="." method="_on_window_about_to_popup"]
[connection signal="close_requested" from="Window" to="Window" method="_on_close_requested"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Window/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/ShowStackTrace" to="Window" method="_on_show_stack_trace_pressed"]
[connection signal="pressed" from="ShowErrors" to="Window" method="_on_show_errors_pressed"]
